Fix full DT width on sidebar collapse

--- a/ui/src/main/scripts/plugins/e2e/less/e2e.less
+++ b/ui/src/main/scripts/plugins/e2e/less/e2e.less
@@ -82,6 +82,10 @@ th {
     }
 }
 
+.dt-card.no-sidebar {
+    width: calc(~"100% - 4em");
+}
+
 .graph-tooltip hr {
     margin-top: 5px;
     margin-bottom: 5px;
